issues in services section with icons on ios devices

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -93,6 +93,9 @@
     }
     .services {
       .service {
+        img{
+          max-height: 5rem;
+        }
         margin: 0rem 0rem 3rem 0rem;
         flex-basis: initial;
         .service-details {
@@ -278,8 +281,10 @@
     }
     .services {
       .service {
+        img{
+          max-height: 5rem;
+        }
         margin: 0rem 0rem 3rem 0rem;
-        flex-basis: initial;
         .service-details {
           max-width: 13rem;
           h2 {
@@ -464,6 +469,9 @@
     }
     .services {
       .service {
+        img{
+          max-height: 5rem;
+        }
         margin: 0rem 0rem 3rem 0rem;
         flex-basis: initial;
         .service-details {
@@ -610,6 +618,9 @@
     }
     .services {
       .service {
+        img{
+          max-height: 5rem;
+        }
         margin: 0rem 0rem 3rem 0rem;
         flex-basis: initial;
         .service-details {
